--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,3 @@
-<simple-notifications></simple-notifications>
+<simple-notifications [options]="options"></simple-notifications>
 <app-loader *ngIf="isBusy"></app-loader>
 <router-outlet></router-outlet>
