--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -3,11 +3,11 @@
         <div class="col-md-3 register-left">
             <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt="" />
             <h3>Welcome</h3>
-            <p>You are 30 seconds ahead of register!</p>
+            <p>Please login if you have an Employee account</p>
             <button class="w-50" style="border-radius: 50px;" (click)="selectNavigation('/auth/login')">Login</button>
         </div>
         <div class="col-md-9 register-right">
-            <form #patientForm="ngForm">
+            <form #registerForm="ngForm">
 
                 <div class="tab-pane fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                     <h3 class="register-heading">Employee</h3>
@@ -84,7 +84,7 @@
                                 </div>
                             </div>
                             <button class="btnRegister" (click)="registerHandler()"
-                                [disabled]="!patientForm.valid">Register</button>
+                                [disabled]="!registerForm.valid">Register</button>
                         </div>
                     </div>
                 </div>
