Minor style fix

--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -4,7 +4,7 @@
             <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt="" />
             <h3>Welcome</h3>
             <p>Please login if you have an Employee account</p>
-            <button class="w-50" style="border-radius: 50px;" (click)="selectNavigation('/auth/login')">Login</button>
+            <button class="w-50 btn" style="border-radius: 50px;" (click)="selectNavigation('/auth/login')">Login</button>
         </div>
         <div class="col-md-9 register-right">
             <form #registerForm="ngForm">
