--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -4,7 +4,7 @@
             <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt="" />
             <h3>Welcome</h3>
             <p>Are you a new Employee! Please register.</p>
-            <button class="w-50" style="border-radius: 50px;" (click)="selectNavigation('/auth/register')">Register</button>
+            <button class="w-50 btn" style="border-radius: 50px;" (click)="selectNavigation('/auth/register')">Register</button>
         </div>
         <div class="col-md-9 register-right">
             <form #loginForm="ngForm">
